# miles-tito-tokenizer

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  LICENSE  LICENSE-SGLANG-DEEPSEEKV32.md  LICENSE-SGLANG-DEEPSEEKV4.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/miles_tito_tokenizers/: __init__.py  _compat.py  comparator.py  message_utils.py  template.py  template_jinja.py  template_resolution.py  tokenizer.py  tokenizer_type.py  tool_utils.py
src/miles_tito_tokenizers/encoders/: __init__.py  _tool.py  deepseek_v32.py  deepseek_v4.py
src/miles_tito_tokenizers/scripts/: __init__.py  verify_chat_template.py  verify_session_tito_tokenizer.py
src/miles_tito_tokenizers/testing/: __init__.py  chat_template_verify.py  mock_trajectories.py
tests/: test_deepseek_v32.py  test_deepseek_v4.py  test_fixed_templates.py  test_imports.py  test_pretokenized_chat.py  test_pretokenized_via_tito.py  test_tito_tokenizer.py  test_token_seq_comparator.py
