[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "miles-tito-tokenizers"
version = "0.1.1"
description = "Standalone TITO (Token-In-Token-Out) tokenizers extracted from the miles project."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "miles-tito-tokenizers contributors" },
]
keywords = ["tokenizer", "tito", "chat-template", "llm", "miles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40",
    "tokenizers>=0.19",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "tiktoken>=0.7",
    "backports.strenum; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "hypothesis>=5.40",
]

[project.urls]
Homepage = "https://github.com/radixark/miles-tito-tokenizers"
Repository = "https://github.com/radixark/miles-tito-tokenizers"
Documentation = "https://github.com/radixark/miles-tito-tokenizers/blob/main/README.md"
"Original miles project" = "https://github.com/radixark/miles"

[tool.hatch.build.targets.wheel]
packages = ["src/miles_tito_tokenizers"]

include = [
    "src/miles_tito_tokenizers/**/*.py",
    "src/miles_tito_tokenizers/**/*.jinja",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
